--- a/DL4H_Team_121.ipynb
+++ b/DL4H_Team_121.ipynb
@@ -48,6 +48,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Github Link\n",
+        "\n",
+        "[Repo Link](https://github.com/just99kim/CS598/)"
+      ],
+      "metadata": {
+        "id": "f1J93-gIZM7n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Introduction\n",
         "\n",
         "*   Background\n",
